== 2.9.6 ==
Release date: 
* Fix: Icon List - Icon type text was not working

== 2.9.5 ==
Release date: September 6, 2025
* Enhancement: Info Box - Added support for all responsive resolutions
* Fix: Info Box - Minor issue with icon responsive position option
* Development: Tested compatibility with Elementor 3.32.0

== 2.9.4 ==
Release date: August 13, 2025
* Enhancement: Pricing Table - Added Table style options
* Enhancement: Pricing Table - Added fraction style option
* Security Fix

== 2.9.3 ==
Release date: August 6, 2025
* Enhancement: Updated Elementor compatibility tags
* Fix: Charts - Added missing chart.js lib

== 2.9.2 ==
Release date: July 4, 2025
* Enhancement: Promo Box - Updated description control type to WYSIWYG
* Enhancement: Promo Box - Added option to show icon above or below content
* Enhancement: Interactive Circle - Added an option to use image as tab icon
* Enhancement: Gravity Forms - Added option to reload the page
* Fix: Image Accordion - Dynamic links support for URL field
* Fix: Image Scroll - Fixed JS error with scroll trigger

== 2.9.1 ==
Release date: March 26, 2025
* Enhancement: Advanced Charts - Added option to show chart title
* Enhancement: Advanced Charts - Added options to show title for X-axis and Y-axis
* Enhancement: Icon List - Added hover background option for list items
* Fixed: Carousel issue in various widgets

== 2.9.0 ==
Release date: March 5, 2025
* New: Charts widget
* Fixed: Instagram Feed - Lightbox arrows were not showing

== 2.8.4 ==
Release date: February 28, 2025
* Enhancement: Price Menu - Added 1 new style
* Enhancement: Image Accordion - Added option to apply link on button or item container
* Enhancement: Info Grid & Carousel - Added Icon Position option
* Enhancement: Info Table - Added Icon Position option
* Fixed: Logo Grid - Minor CSS glitch when link is added to logo
* Fixed: Display Conditions - Deprecated code in Request Parameter condition

== 2.8.3 ==
Release date: December 24, 2024